[package]
name = "compile-typst-site"
description = "Binary tool for static site generation using Typst."
repository = "https://github.com/wade-cheng/compile-typst-site/"
version = "2.0.2"
edition = "2024"
license = "MIT"
exclude = [
    "examples/typst-site-full",  # this uses images, which make the package size much larger
    "tests/integration_test_contents",  # likewise
]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", optional = true }
derivative = "2.2.0"
glob = "0.3.3"
log = "0.4.28"
notify-debouncer-full = "0.6.0"
onlyargs = "0.2.0"
onlyargs_derive = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] } 
simple_logger = { version = "5.1.0", default-features = false, features = ["colors"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"], optional = true }
toml = "0.9.8"
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["fs", "set-header"], optional = true }
tower-livereload = { version = "0.9.6", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
walkdir = "2.5.0"

[features]
default = ["serve"]
serve = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-livereload",
    "dep:tracing-subscriber",
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
