[package]
name = "compile-typst-site"
description = "Command-line program for static site generation using Typst."
repository = "https://github.com/wade-cheng/compile-typst-site/"
version = "2.1.0-rc2"
edition = "2024"
license = "MIT"
exclude = [
    "examples/typst-site-full",  # this uses images, which make the package size much larger
    "tests/integration_test_contents",  # likewise
]

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
json = "0.12.4"
log = "0.4.28"
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "toml"] }
notify-debouncer-full = "0.6.0"
onlyargs = "0.2.0"
onlyargs_derive = "0.2.0"
simple_logger = { version = "5.1.0", default-features = false, features = ["colors"] }
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
